// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Select show/hide options by click 1`] = `
<div>
  <div
    class="container"
  >
    <button
      class="button lg link"
      type="button"
    >
      1
    </button>
  </div>
</div>
`;

exports[`components/Select show/hide options by click 2`] = `
<div>
  <div
    class="container"
  >
    <button
      class="button lg link"
      type="button"
    >
      1
    </button>
    <ul
      class="list"
      role="listbox"
    >
      <li
        aria-selected="true"
        class="item selected"
        role="option"
        tabindex="0"
        title="1"
      >
        1
      </li>
      <li
        aria-selected="false"
        class="item"
        role="option"
        tabindex="0"
        title="2"
      >
        2
      </li>
    </ul>
  </div>
</div>
`;

exports[`components/Select show/hide options by click 3`] = `
<div>
  <div
    class="container"
  >
    <button
      class="button lg link"
      type="button"
    >
      1
    </button>
  </div>
</div>
`;
